# Model-to-SVG

./: .gitignore  Parts_Bin - Parts Bin.step  Parts_Bin - Parts Bin.stl  README.md  pyproject.toml  run_laser_svg_tool.cmd  run_laser_svg_web.cmd
src/laser_svg_tool/: __init__.py  canvas.py  document.py  geometry.py  main.py  svg_export.py  text_geometry.py  web_api.py
src/laser_svg_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
webapp/: package-lock.json
webapp/src/: App.css  App.tsx  api.ts  index.css  previewGeometry.ts  svgExport.ts  types.ts
